--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:hwads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <TextView
+        android:layout_marginTop="48dp"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:text="Hatırlatıcı Tipi"
+        android:id="@+id/event_txt"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <NumberPicker
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/event_txt"
+        android:id="@+id/event_picker"
+        android:layout_width="match_parent"
+        android:layout_height="180dp" />
+
+    <View
+        android:id="@+id/view"
+        android:background="@color/emui_color_gray_7"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/event_picker"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:text="Dakika"
+        android:id="@+id/minutes_txt"
+        app:layout_constraintTop_toTopOf="@id/view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <NumberPicker
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/minutes_txt"
+        android:id="@+id/minute_picker"
+        android:layout_width="match_parent"
+        android:layout_height="180dp" />
+
+    <Button
+        android:text="Onayla"
+        android:id="@+id/btn_success"
+        android:layout_margin="32dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/minute_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <com.huawei.hms.ads.banner.BannerView
+        android:id="@+id/banner_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        hwads:bannerSize="BANNER_SIZE_320_50"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
